# stringutils

./: Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml  render.yaml  requirements-dev.txt
.github/workflows/: ci.yml  deploy.yml
app/: exception_handlers.py  main.py  schemas.py  security.py  utils.py
app/api/v1/: endpoints.py
app/services/: string_ops.py
tests/: conftest.py  test_api_behavior.py  test_ascii.py  test_charcount.py  test_cors.py  test_endpoints.py  test_escape_html.py  test_exception_handler.py  test_health.py  test_lowercase.py  test_palindrome.py  test_reverse.py  test_slugify.py  test_striptags.py  test_unentity.py  test_uppercase.py  test_uuid.py
